--- a/MyFirstNotebook.ipynb
+++ b/MyFirstNotebook.ipynb
@@ -2,8 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "d33c860e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "54b63f82",
+   "id": "412033e4",
    "metadata": {},
    "outputs": [],
    "source": []
