--- a/MyFirstNotebook.ipynb
+++ b/MyFirstNotebook.ipynb
@@ -20,8 +20,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "efe029d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'hello' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(hello)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'hello' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(hello)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef8cea47",
    "metadata": {},
    "outputs": [],
    "source": []
